[project]
name = "mj-manipulator"
version = "2.0.0"
description = "Generic MuJoCo manipulator control: planning, execution, grasping, and cartesian control for any robot arm"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
maintainers = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "mujoco",
    "scipy",
    "toppra>=0.6.3",
    "mj-environment @ git+https://github.com/personalrobotics/mj_environment.git",
    "pycbirrt @ git+https://github.com/personalrobotics/pycbirrt.git",
    "tsr @ git+https://github.com/personalrobotics/tsr.git",
    "eaik",
    "mink>=1.1.0",
    "prl-assets @ git+https://github.com/personalrobotics/prl_assets.git",
]

[tool.uv.sources]
mj-environment = { workspace = true }
pycbirrt = { workspace = true }
tsr = { workspace = true }
prl-assets = { workspace = true }

[project.optional-dependencies]
bt = [
    "py_trees>=2.2",
]
console = [
    "ipython>=8.0",
    "mj-manipulator[bt]",
]
dev = [
    "pytest",
    "ruff",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mj_manipulator"]

[project.urls]
Homepage = "https://github.com/personalrobotics/mj_manipulator"
Repository = "https://github.com/personalrobotics/mj_manipulator"
Issues = "https://github.com/personalrobotics/mj_manipulator/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/mj_manipulator/__init__.py" = ["F401"]
"src/mj_manipulator/**/__init__.py" = ["F401"]
